@@ -14,7 +14,7 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
-	$Id: server.h,v 1.45 2007/03/05 17:27:22 vvd0 Exp $
+	$Id: server.h,v 1.46 2007/04/06 21:15:13 qqshka Exp $
 */
 
 // server.h
@@ -206,6 +206,9 @@ typedef struct client_s
 	client_frame_t	frames[UPDATE_BACKUP];		// updates can be deltad from here
 
 	FILE			*download;			// file being downloaded
+#ifdef PROTOCOL_VERSION_FTE
+	int				download_position; // chunked download used fseek(), since this is may be pak file, we need offset in pak file
+#endif
 	int				downloadsize;			// total bytes
 	int				downloadcount;			// bytes sent
 // demo download list for internal cmd dl function
@@ -246,6 +249,10 @@ typedef struct client_s
 //<-
 	float			lastuserinfotime;		// time of last userinfo change
 	int				lastuserinfocount;		// count of last userinfo change
+
+#ifdef PROTOCOL_VERSION_FTE
+	unsigned int	fteprotocolextensions;
+#endif
  
 //===== NETWORK ============
 	int				chokecount;
@@ -396,6 +403,10 @@ typedef struct
 	svstats_t		stats;
 
 	char				info[MAX_SERVERINFO_STRING];
+
+#ifdef PROTOCOL_VERSION_FTE
+	unsigned int fteprotocolextensions;
+#endif
 
 	// log messages are used so that fraglog processes can get stats
 	int				logsequence;		// the message currently being filled
