@@ -16,7 +16,7 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
-	$Id: sv_main.c,v 1.96 2007/03/31 15:11:25 qqshka Exp $
+	$Id: sv_main.c,v 1.97 2007/04/06 21:15:13 qqshka Exp $
 */
 
 #include "qwsvdef.h"
@@ -732,6 +732,7 @@ challenge, they must give a valid IP address.
 static void SVC_GetChallenge (void)
 {
 	int oldestTime, oldest, i;
+	char buf[256], *over;
 
 
 	oldest = 0;
@@ -759,8 +760,25 @@ static void SVC_GetChallenge (void)
 	}
 
 	// send it back
-	Netchan_OutOfBandPrint (net_from, "%c%i", S2C_CHALLENGE,
-	                        svs.challenges[i].challenge);
+	snprintf(buf, sizeof(buf), "%c%i", S2C_CHALLENGE, svs.challenges[i].challenge);
+	over = buf + strlen(buf) + 1;
+
+#ifdef PROTOCOL_VERSION_FTE
+	//tell the client what fte extensions we support
+	if (svs.fteprotocolextensions)
+	{
+		int lng;
+
+		lng = LittleLong(PROTOCOL_VERSION_FTE);
+		memcpy(over, &lng, sizeof(int)); // FIXME sizeof(int) or sizeof(long)???
+		over += 4;
+
+		lng = LittleLong(svs.fteprotocolextensions);
+		memcpy(over, &lng, sizeof(int));
+		over += 4;
+	}
+#endif
+	Netchan_OutOfBand(net_from, over-buf, buf);
 }
 
 static qbool ValidateUserInfo (char *userinfo)
@@ -802,6 +820,9 @@ static void SVC_DirectConnect (void)
 	char *s, *key;
 	netadr_t adr;
 	edict_t *ent;
+#ifdef PROTOCOL_VERSION_FTE
+	unsigned int protextsupported = 0;
+#endif
 
 
 	version1 = Q_atoi(Cmd_Argv(1));
@@ -824,6 +845,28 @@ static void SVC_DirectConnect (void)
 		Netchan_OutOfBandPrint (net_from, "%c\nInvalid userinfo. Restart your qwcl\n", A2C_PRINT);
 		return;
 	}
+
+#ifdef PROTOCOL_VERSION_FTE
+
+//
+// WARNING: WARNING: WARNING: using Cmd_TokenizeString() so do all Cmd_Argv() above.
+//
+
+	while(!msg_badread)
+	{
+		Cmd_TokenizeString(MSG_ReadStringLine());
+		switch(Q_atoi(Cmd_Argv(0)))
+		{
+		case PROTOCOL_VERSION_FTE:
+			protextsupported = Q_atoi(Cmd_Argv(1));
+			Con_DPrintf("Client supports 0x%x fte extensions\n", protextsupported);
+			break;
+		}
+	}
+
+	msg_badread = false;
+
+#endif
 
 	// see if the challenge is valid
 	for (i = 0; i < MAX_CHALLENGES; i++)
@@ -1002,6 +1045,10 @@ static void SVC_DirectConnect (void)
 	//memset (newcl, 0, sizeof(*newcl));
 	//we first set newcl->rip_vip and then clean newcl - nice! :-[=]
 	newcl->userid = SV_GenerateUserID();
+
+#ifdef PROTOCOL_VERSION_FTE
+	newcl->fteprotocolextensions = protextsupported;
+#endif
 
 	strlcpy (newcl->userinfo, userinfo, sizeof(newcl->userinfo));
 
@@ -3138,6 +3185,10 @@ void SV_InitLocal (void)
 
 	for (i=0 ; i<MAX_MODELS ; i++)
 		snprintf (localmodels[i], MODEL_NAME_LEN, "*%i", i);
+
+#ifdef PEXT_CHUNKEDDOWNLOADS
+	svs.fteprotocolextensions |= PEXT_CHUNKEDDOWNLOADS;
+#endif
 
 //	Info_SetValueForStarKey (svs.info, "*qwe_version", QWE_VERSION, MAX_SERVERINFO_STRING);
 //	Info_SetValueForStarKey (svs.info, "*version", QW_VERSION, MAX_SERVERINFO_STRING);
